# uc-metric-views

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml  release.yml
docs/: ARCHITECTURE.md
docs/plans/: plan_v0.1_release.md
examples/: README.md  basic_single_table.yaml  star_schema_joins.yaml  with_semantic_metadata.yaml
src/metricviews/: __init__.py  cli.py  deployer.py  generator.py  heuristics.py  introspector.py  models.py  validator.py
src/uc_metrics/: __init__.py  cli.py  deployer.py  generator.py  heuristics.py  introspector.py  models.py  validator.py
tests/: conftest.py  test_cli.py  test_deployer.py  test_generator.py  test_heuristics.py  test_introspector.py  test_models.py  test_validator.py
tests/fixtures/: invalid_missing_measures.yaml  sample_orders.yaml  star_schema_with_joins.yaml  unquoted_on_key.yaml  with_materialization.yaml  with_window_measures.yaml
