[build-system]
requires = ["hatchling>=1.21,<2.0"]
build-backend = "hatchling.build"

[project]
name = "uc-metric-views"
version = "0.1.1"
description = "Generate, validate and deploy Databricks Unity Catalog Metric Views"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Barath B K" }]
keywords = ["databricks", "metric-views", "unity-catalog", "semantic-layer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]
dependencies = [
    "databricks-sdk>=0.30.0,<1.0",
    "pydantic>=2.0,<3.0",
    "click>=8.0,<9.0",
    "pyyaml>=6.0,<7.0",
]

[project.urls]
Homepage = "https://github.com/barath2904/uc-metric-views"
Source = "https://github.com/barath2904/uc-metric-views"
Issues = "https://github.com/barath2904/uc-metric-views/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.15.6,<0.16.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
ucm = "metricviews.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/metricviews"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify
    "RET",    # flake8-return (dead code after returns)
    "PERF",   # perflint (performance anti-patterns)
    "RUF",    # ruff-specific rules
]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=metricviews --cov-report=term-missing"

[tool.coverage.run]
source = ["metricviews"]

[tool.coverage.report]
show_missing = true
fail_under = 80
